# gp-proxy

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .yamllint.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  control_listener.py  docker-compose.yml  entrypoint.sh  index.css  index.html  index.js  precommit_final_full.txt  precommit_full_output.txt  pyproject.toml  pytest_output.txt  pytest_output_v2.txt  renovate.json  server.py  stdin_proxy.py  utils.py
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  pre-commit-sync.yml  release-client.yml  test.yml
apps/gp-client-proxy/: AGENTS.md  Cargo.toml  build.rs
apps/gp-client-proxy/assets/: AppIcon.icns
apps/gp-client-proxy/src/: AGENTS.md  main.rs
backend/: AGENTS.md  __init__.py  control_listener.py  server.py  stdin_proxy.py  utils.py  vpnc-wrapper.sh
tests/: AGENTS.md  __init__.py  test_callback_e2e.py  test_control_listener.py  test_fifo_ingestion.py  test_server.py  test_server_api.py  test_stdin_proxy.py  test_utils.py
web/: AGENTS.md  index.css  index.html  index.js
