# File: apps/gp-client-proxy/Cargo.toml
[package]
name = "gp-client-proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[build-dependencies]
winres = "0.1"

[dependencies]
ureq = { version = "3.1", features = ["json"] }
anyhow = "1.0"
directories = "6.0"
env_logger = "0.11"
log = "0.4"
webbrowser = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
